--- a/templates/page1.html
+++ b/templates/page1.html
@@ -17,13 +17,13 @@
         </div>
     </section>
     <div class="body">
-        <p><span class="text_start">No</span>, We all are humans, who are considered are the most intelligent creature
+        <p><span class="text_start">No</span>, We all are humans, who are considered the most intelligent creature
             on this Earth. Its our responsibility to maintain the balance in Environment.
             We have to stop poaching and hunting of wildlife as they are also a important part of this earth.
-            But, due to negligence of humans some species are already vanishes from Earth which are known as Extinct
-            whereas some species are on the line of being extinct which are known as Endangered. Its still in our hands
-            to protect these Endangered from being extinct. So, in the following webpage we have shared the details of
-            some Endangered animals and birds, whose origin is from sikkim.</p>
+            But, due to negligence of humans some species are already vanished from Earth which are known as Extinct
+            whereas some species are on the way of getting extinct which are known as Endangered. Its still in our hands
+            to protect these Endangered from getting extinct. So, in the following webpage we have shared the details of
+            some Endangered animals and birds, whose origin is sikkim.</p>
         <div class="images">
             <div class="image"><img src="/static/images/barbary_lion_1.jpg" alt=""></div>
             <div class="image"><img src="/static/images/mammath.jpg" alt=""></div>
@@ -32,8 +32,8 @@
         <p class="text">These are some examples of Critically Endangered and Extinct animals.</p>
         <br>
         <p class="text"><strong>Do you know what makes a animal extinct or Endangered?</strong></p>
-        <p>Its human greed and sometimes its may be climate. Animals of past such as Dinosaurs were extinct due to
-            drastic natural calamity. Whereas animals like Tiger are Endangered because of their hunt by human beings
+        <p>Its human greed and sometimes it may be climate. Animals of past such as Dinosaurs were extinct due to
+            drastic natural calamities. Whereas animals like Tiger are Endangered because of their hunt by human beings
             for their skin. One-horned rhinoceros is a critically Endangered animal because they were hunted because of
             their horn.</p>
             <br>
