--- a/templates/show_animal.html
+++ b/templates/show_animal.html
@@ -27,7 +27,7 @@
         <p>Order: {{ animal['Order'] }}</p>
         <p>Family: {{ animal['Family'] }}</p>
         <p>Genus: {{ animal['Genus'] }}</p>
-        <p>Scientific Name: <em>{{ animal['Bioloical Name'] }}</em></p>
+        <p>Scientific Name: <em>{{ animal['Biological Name'] }}</em></p>
         <div class="links">
             <h1>
                 <a href="/endangered-birds-and-animals">Back</a>
