--- a/templates/title_page.html
+++ b/templates/title_page.html
@@ -34,6 +34,14 @@
                 </div>
             </div>
             <div class="card">
+                <img src="/static/images/arpit_s.jpg" >
+                <div class="content">
+                    <h2>Arpit Sharma</h2>
+                    <h3>Data compiler</h3>
+                    <h3>Styling advisor</h3>
+                </div>
+            </div>
+            <div class="card">
                     <img src="/static/images/asmit_k.jpg">
                 <div class="content">
                     <h2>Asmit Kumar</h2>
